# shikimori-client

./: Cargo.toml  README.md
src/: lib.rs  oauth.rs
src/client/: client.rs  limitter.rs  mod.rs
src/client/shiki_types/: anime_details.rs  mod.rs  shared_new_types.rs  user_messages.rs  user_rates.rs  whoami.rs
